# distance-vector-routing-algorithm

./: .clang-format  CMakeLists.txt  README.md
inputs/: changeinput1.txt  config0.txt  configL.txt
outputs/: OuputAccordingToconfigL.txt  outputConfig0.txt
src/: DistanceVector.c  DistanceVector.cpp  DistanceVectorRough.cpp  PoisonedReverse.cpp  SimpleDistanceVector.cpp
